--- a/Paths/Frontend_Dev/Angular2/Beginner/Angular - Getting Started/angular-2-getting-started-update_082020/06/mysol_1/my-apm/src/app/products/products.component.html
+++ b/Paths/Frontend_Dev/Angular2/Beginner/Angular - Getting Started/angular-2-getting-started-update_082020/06/mysol_1/my-apm/src/app/products/products.component.html
@@ -21,7 +21,7 @@
           <tr>
             <th>
               <button class='btn btn-primary' (click)='toggleImage()'>
-                Show Image
+                {{showImage ? 'Hide' : 'Show'}} Image
               </button>
             </th>
             <th>Product</th>
