--- a/Paths/Frontend_Dev/Angular2/Beginner/Angular - Getting Started/angular-2-getting-started-update_082020/08/mysol_1/my-apm/src/app/products/products.component.html
+++ b/Paths/Frontend_Dev/Angular2/Beginner/Angular - Getting Started/angular-2-getting-started-update_082020/08/mysol_1/my-apm/src/app/products/products.component.html
@@ -42,7 +42,8 @@
             <td>{{ product.productCode | lowercase | convertToSpaces: '-' }}</td>
             <td>{{ product.releaseDate }}</td>
             <td>{{ product.price | currency:'USD':'symbol':'1.2-2' }}</td>
-            <td>{{ product.starRating }}</td>
+            <!-- <td>{{ product.starRating }}</td> -->
+            <td><app-star [rating]='product.starRating'></app-star></td>
           </tr>
         </tbody>
       </table>
