--- a/Paths/Frontend_Dev/Angular2/Beginner/Angular - Getting Started/angular-2-getting-started-update_082020/08/mysol_1/my-apm/src/app/products/products.component.html
+++ b/Paths/Frontend_Dev/Angular2/Beginner/Angular - Getting Started/angular-2-getting-started-update_082020/08/mysol_1/my-apm/src/app/products/products.component.html
@@ -43,7 +43,7 @@
             <td>{{ product.releaseDate }}</td>
             <td>{{ product.price | currency:'USD':'symbol':'1.2-2' }}</td>
             <!-- <td>{{ product.starRating }}</td> -->
-            <td><app-star [rating]='product.starRating'></app-star></td>
+            <td><app-star [my-rating]='product.starRating' (my-ratingClicked)='onRatingClicked($event)'></app-star></td>
           </tr>
         </tbody>
       </table>
