--- a/Paths/Frontend_Dev/Angular2/Beginner/Angular - Getting Started/angular-2-getting-started-update_082020/11/mysol_1/my-apm/src/app/products/product-detail/product-detail.component.html
+++ b/Paths/Frontend_Dev/Angular2/Beginner/Angular - Getting Started/angular-2-getting-started-update_082020/11/mysol_1/my-apm/src/app/products/product-detail/product-detail.component.html
@@ -1,5 +1,4 @@
-<div class='card'
-     *ngIf='product'>
+<div class='card' *ngIf='product'>
   <div class='card-header'>
     {{pageTitle + ': ' + product.productName}}
   </div>
