--- a/Paths/Frontend_Dev/Misc/Angular/Angular Component Communication/angular-component-communication/03/mysol_1/my-apm/src/app/products/product-shell/product-shell-detail.component.html
+++ b/Paths/Frontend_Dev/Misc/Angular/Angular Component Communication/angular-component-communication/03/mysol_1/my-apm/src/app/products/product-shell/product-shell-detail.component.html
@@ -1,4 +1,4 @@
-<div class='panel panel-primary' *ngIf='product'>
+<!-- <div class='panel panel-primary' *ngIf='product'>
         <div class='panel-heading'>
             Product Detail: {{product.productName}}
         </div>
@@ -52,3 +52,4 @@
             </a>
         </div>
     </div>
+ -->
