--- a/Paths/Frontend_Dev/Misc/Angular/Angular Component Communication/angular-component-communication/03/mysol_1/my-apm/src/app/products/product-shell/product-shell.component.html
+++ b/Paths/Frontend_Dev/Misc/Angular/Angular Component Communication/angular-component-communication/03/mysol_1/my-apm/src/app/products/product-shell/product-shell.component.html
@@ -7,9 +7,9 @@
 </div>
 <div class='row'>
     <div class='col-md-4'>
-        <pm-product-shell-list></pm-product-shell-list>
+        <app-product-shell-list></app-product-shell-list>
     </div>
     <div class='col-md-8'>
-        <pm-product-shell-detail></pm-product-shell-detail>
+        <app-product-shell-detail></app-product-shell-detail>
     </div>
 </div>
