--- a/Paths/Frontend_Dev/Misc/Angular/Angular Component Communication/angular-component-communication/03/mysol_1/my-apm/src/app/products/product-list.component.html
+++ b/Paths/Frontend_Dev/Misc/Angular/Angular Component Communication/angular-component-communication/03/mysol_1/my-apm/src/app/products/product-list.component.html
@@ -11,8 +11,10 @@
 			    <!-- <input type='text'
                        [ngModel]='listFilter'
                        (ngModelChange)='onFilterChange($event)' /> -->
+                <!-- <input type='text'
+                       [(ngModel)]='listFilter' /> -->
                 <input type='text'
-                       [(ngModel)]='listFilter' />
+                       [ngModel]='listFilter' (ngModelChange)='onFilterChange($event)' />
             </div>
         </div>
         <div class='row' [hidden]='!listFilter'>
