--- a/Paths/Frontend_Dev/Misc/Angular/Angular Component Communication/angular-component-communication/04/mysol_1/my-apm/src/app/products/product-list.component.html
+++ b/Paths/Frontend_Dev/Misc/Angular/Angular Component Communication/angular-component-communication/04/mysol_1/my-apm/src/app/products/product-list.component.html
@@ -11,7 +11,7 @@
 			    <!-- <input type='text'
                        [ngModel]='listFilter'
                        (ngModelChange)='onFilterChange($event)' /> -->
-                <input type='text'
+                <input type='text' #filterElement
                        [(ngModel)]='listFilter' />
                 <!-- <input type='text'
                        [ngModel]='listFilter' (ngModelChange)='onFilterChange($event)' /> -->
