--- a/Paths/Frontend_Dev/Misc/Angular/Angular Component Communication/angular-component-communication/04/demos/APM/src/app/products/product-list.component.html
+++ b/Paths/Frontend_Dev/Misc/Angular/Angular Component Communication/angular-component-communication/04/demos/APM/src/app/products/product-list.component.html
@@ -12,10 +12,10 @@
                 <input type='text' #filterElement
                        [(ngModel)]='listFilter' />
             </div>
-            <!-- <div class='col-md-2'>Filter Name:</div>
+            <div class='col-md-2'>Filter Name:</div>
             <div class='col-md-4'>
                 <input #nameElement type='text' [(ngModel)]='filterName' />
-            </div> -->
+            </div>
         </div>
         <div class='row' [hidden]='!listFilter'>
             <div class='col-md-10'>
