--- a/Paths/Frontend_Dev/Misc/Angular/Angular Component Communication/angular-component-communication/04/mysol_1/my-apm/src/app/products/product-detail.component.html
+++ b/Paths/Frontend_Dev/Misc/Angular/Angular Component Communication/angular-component-communication/04/mysol_1/my-apm/src/app/products/product-detail.component.html
@@ -50,7 +50,8 @@
         <a class='btn btn-default'  style='width:80px' (click)='onBack()'>
             <i class='glyphicon glyphicon-chevron-left'></i> Back
         </a>
-        <a class="btn btn-primary" style="width:80px" [routerLink]="['/products', product.id, 'edit']">
+        <!-- <a class="btn btn-primary" style="width:80px" [routerLink]="['/products', product.id, 'edit']"> -->
+        <a class="btn btn-primary" style="width:80px" [routerLink]="['edit']">
             Edit
         </a>
     </div>
