--- a/Paths/Frontend_Dev/Misc/Angular/Angular Component Communication/angular-component-communication/04/mysol_1/my-apm/src/app/products/product-list.component.html
+++ b/Paths/Frontend_Dev/Misc/Angular/Angular Component Communication/angular-component-communication/04/mysol_1/my-apm/src/app/products/product-list.component.html
@@ -16,10 +16,10 @@
                 <!-- <input type='text'
                        [ngModel]='listFilter' (ngModelChange)='onFilterChange($event)' /> -->
             </div>
-            <div class='col-md-2'>Filter Name:</div>
+           <!--  <div class='col-md-2'>Filter Name:</div>
             <div class='col-md-4'>
                 <input #nameElement type='text' [(ngModel)]='filterName' />
-            </div>
+            </div> -->
         </div>
         <div class='row' [hidden]='!listFilter'>
             <div class='col-md-10'>
