--- a/Paths/Frontend_Dev/Angular2/Beginner/Angular - Getting Started/angular-2-getting-started-update_062021/05/mysol_1/my-apm/src/app/app.component.html
+++ b/Paths/Frontend_Dev/Angular2/Beginner/Angular - Getting Started/angular-2-getting-started-update_062021/05/mysol_1/my-apm/src/app/app.component.html
@@ -1,10 +1,3 @@
-<div style="text-align:center">
-  <h1>
-    TaDa! Welcome to {{title}}!!
-  </h1>
-  ... Starter Files ...
-</div>
-
-<div class="container">
-	<app-ch4-test></app-ch4-test>
+<div><h1>{{pageTitle}}</h1>
+  <app-products></app-products>
 </div>
